--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-6 mx-auto">
           <div class="card mx-4">
             <div class="card-body p-4">
-              <form (formGroup)="loginForm" (ngSubmit)="onSubmit()">
+              <!-- <form (formGroup)="loginForm" (ngSubmit)="onSubmit()">
                 <h1>Register</h1>
                 <p class="text-muted">Create your account</p>
                 <div class="input-group mb-3">
@@ -33,7 +33,7 @@
                   <input type="password" formControlName="newpassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.new-password.errors }"placeholder="Repeat password" autocomplete="new-password" required>
                 </div>
                 <button type="button" class="btn btn-block btn-success">Create Account</button>
-              </form>
+              </form> -->
             </div>
             <div class="card-footer p-4">
               <div class="row">
